fixed cards on small screen

--- a/frontend/src/app/landing/landing.component.cards.sass
+++ b/frontend/src/app/landing/landing.component.cards.sass
@@ -2,13 +2,18 @@ ul
   list-style-type: none
 
 .cards
+  padding-top: 8vh
   font-family:  helvetica, sans-serif
   max-width: 1200px
+  margin-left: auto
+  margin-right: auto
   width: 100%
   .cards_item
-    width: 30%
+    max-width: 600px
     display: flex
     padding: 1rem
+    margin-left: auto
+    margin-right: auto
 
 
 .card
@@ -74,15 +79,6 @@ ul
   line-height: 1.5
   margin-bottom: 1.25rem
 
-@media (max-width: 765px)
-  .cards
-    flex-direction: column
-    flex-wrap: wrap
-    border: 1px solid red
-    width: 95%
-    .card
-      float: left
-      min-width: 270%
-      margin-right: auto
-      border: 1px solid black
+//@media (max-width: 765px)
+
 
