--- a/frontend/src/app/landing/landing.component.footer.sass
+++ b/frontend/src/app/landing/landing.component.footer.sass
@@ -7,7 +7,7 @@
   text-align: left
   font: normal 16px sans-serif
   padding: 45px 50px
-  margin-top: 80px
+  margin-top: 8vh
   .footer-left p
     color: #8f9296
     font-size: 14px
