--- a/frontend/src/app/landing/landing.component.sass
+++ b/frontend/src/app/landing/landing.component.sass
@@ -1,5 +1,6 @@
 *
   border: 1px solid black
+  font-family: helvetica, sans-serif
 
 
 .container
@@ -7,7 +8,6 @@
   margin: 0 auto
   width: 100%
   max-width: 1200px
-  font-family: helvetica, sans-serif
 
 #header
   background-color: rgba(0,0,0,0.2)
@@ -55,18 +55,15 @@
   text-align: center
   h1
     padding-top: 20vh
-    font-family: helvetica, sans-serif
     color: white
-  p 
-    font-family: helvetica, sans-serif
 
 .ui-lg-6
   padding: 0
   margin: 0
 
 .content
-  margin-top: 8vh
-  height: 92vh
+  padding-top: 8vh
+  height: 100vh
   width: 100%
   .infoContent
     max-width: 600px
